Revert "Prevent scrollbar causing x overflow"
This reverts commit b7fede3f03942a865bd56c9b7e1e2f1b1a913188.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -34,11 +34,6 @@
 
 /* Page Layout */
 
-html{ 
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
-
 .layout {
   display: flex;
   flex-direction: row;
